service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: front-javascript
    version: v1
  name: front-javascript
spec:
  ports:
    - name: http-8080
      port: 8080
      protocol:
      targetPort: 3000
  selector:
    app: front-javascript
<<<<<<< HEAD
    version: v1
=======
    version: v1
>>>>>>> 115ec869f867815b7ab95495fdf56aa4db16cfb1
