route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: front-javascript
spec:
  to:
    kind: Service
    name: front-javascript
  port:
    targetPort: http-8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
<<<<<<< HEAD
  wildcardPolicy: None
=======
  wildcardPolicy: None
>>>>>>> 115ec869f867815b7ab95495fdf56aa4db16cfb1
